--- a/admini/style.css
+++ b/admini/style.css
@@ -213,7 +213,7 @@ ul#tree span { display:block; float:left; overflow:hidden;}
 .help { margin-left:50px; }
 /***************************************************2012-8-24 全局样式************/
 .header { width:100%; height:50px; background:url(images/topbg.png) repeat-x; position:relative; }
-.logo { height:48px; float:left; background:url(images/logo.png) no-repeat left; text-indent:310px; }
+.logo { height:48px; float:left;  text-indent:10px; }
 .header h1 { font-size:16px; color:#fff; font-family:"微软雅黑"; padding-top:6px; height:42px; line-height:42px; overflow:hidden; }
 .hbtn { width:485px; padding-left:10px; height:48px; position:absolute; right:0; top:0; background:url(images/topbg.png) repeat-x;}
 .hbtn h2 { float:left; margin-right:24px; padding-top:9px; }
@@ -253,9 +253,8 @@ ul#tree span { display:block; float:left; overflow:hidden;}
 .amnew li span a { color:#3399FF; }
 .clr { clear:both; overflow:hidden; }
 .faq { width:253px; border:1px solid #ddd; position:absolute; top:0; right:10px; }
-.footer { float: left; width:100%; height:60px; background:url(images/botbg.png) repeat-x bottom; position:relative; padding-top:42px; }
-.footer div { width:208px; height:102px; background:url(images/botlogo.png) no-repeat 23px 20px; float:left; position:absolute; left:0; top:0; }
-.footer p { padding-left:208px; line-height:22px; color:#666; }
+.footer { width:100%; height:60px; background:url(images/botbg.png) repeat-x bottom; position:relative; padding-top:42px; }
+.footer p { padding-left:10px; line-height:42px; color:#666; }
 .footer p a { color:#666; }
 .footer p a:hover { color:#333; }
 .main .block td { height:35px; }
