--- a/skins/pc/css/style.css
+++ b/skins/pc/css/style.css
@@ -604,7 +604,6 @@ a.popup-logout{
     float: left;
 	font-size:12px;
 	font-weight:bold;
-	text-shadow:0px 1px 0px #4f4f4f;
     height: 30px;
     padding-right: 16px; /* sliding doors padding */
     text-decoration: none;
@@ -613,6 +612,7 @@ a.popup-login span,
 a.popup-logout span {
     /*background: transparent url('../images/bg_contact_span.png') no-repeat;*/
     display: block;
+    color:#333333;
     line-height: 17px;
     padding: 5px 0 8px 41px;
 } 
@@ -1608,7 +1608,7 @@ ul#s3slideContent li img {
 	text-shadow:0px 1px 0px #000000;
 }
 .logofooter-column{
-	width:120px;
+	width:360px;
 	margin-right:15px;
 	padding:0px 0px 30px 4px;
 	float:left;
